tooltips, rightbar items

--- a/config/locale/extra_en.yaml
+++ b/config/locale/extra_en.yaml
@@ -283,3 +283,5 @@ javascripts:
   context:
     suggest_edit: Suggest an edit
     measure_distance: Measure distance
+  map:
+    rotate: Rotate the map
